# sentrux

./: .gitignore
review/: notes.md  signals-overview.md
sentrux-bin/: Cargo.toml
sentrux-bin/src/: main_impl.rs
sentrux-core/src/analysis/graph/: mod.rs
sentrux-core/src/analysis/resolver/: suffix.rs
sentrux-core/src/analysis/scanner/: mod.rs
