[package]
name = "sentrux"
version = "0.5.7"
edition = "2021"
description = "Live codebase visualization and structural quality gate for AI-agent-written code"
license = "MIT"
repository = "https://github.com/sentrux/sentrux"
homepage = "https://github.com/sentrux/sentrux"

[lib]
name = "sentrux_bin"
path = "src/lib.rs"

[[bin]]
name = "sentrux"
path = "src/main.rs"

[dependencies]
sentrux-core = { path = "../sentrux-core" }
clap = { version = "4", features = ["derive"] }
eframe = { workspace = true }
egui = { workspace = true }
dirs = "6"
serde_json = "1"

[features]
default = []
pro = ["sentrux-core/pro"]
